WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299456
[WebGPU Swift] CommandEncoder does not support GPUTexture instances in beginRenderPass
https://bugs.webkit.org/show_bug.cgi?id=299456
Summary
[WebGPU Swift] CommandEncoder does not support GPUTexture instances in beginR...
Mike Wyrzykowski
Reported
2025-09-24 11:06:12 PDT
[WebGPU Swift] CommandEncoder does not support GPUTexture instances in beginRenderPass
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-09-24 11:06:41 PDT
Swift needs to leverage the 'TextureOrTextureView' logic from CommandEncoder.mm
Radar WebKit Bug Importer
Comment 2
2025-09-24 11:06:56 PDT
<
rdar://problem/161261339
>
Mike Wyrzykowski
Comment 3
2025-09-24 11:44:09 PDT
This can be tested by visiting
https://webgpureport.org
and note the lack of warnings on the right box
Mike Wyrzykowski
Comment 4
2025-10-02 10:43:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51686
EWS
Comment 5
2025-10-04 05:30:54 PDT
Committed
300997@main
(ab97aabb7139): <
https://commits.webkit.org/300997@main
> Reviewed commits have been landed. Closing PR #51686 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug