[WebGPU Swift] CommandEncoder does not support GPUTexture instances in beginRenderPass https://bugs.webkit.org/show_bug.cgi?id=299456 rdar://161261339

Reviewed by Cameron McCormack.

Factor out Texture variant into its own header file so Swift
and Objective-C implementations can share the same logic.

* Source/WebGPU/WebGPU.xcodeproj/project.pbxproj:
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::beginRenderPass):
(WebGPU::TextureOrTextureView::TextureOrTextureView): Deleted.
(WebGPU::TextureOrTextureView::setCommandEncoder): Deleted.
(WebGPU::isRenderableTextureView): Deleted.
* Source/WebGPU/WebGPU/CommandEncoder.swift:
(WebGPU.beginRenderPass(_:)):
(WebGPU.isRenderableTextureView(_:)): Deleted.
* Source/WebGPU/WebGPU/Internal/WebGPUSwiftInternal.h:
(WebGPU_Internal::isValidToUseWith):
* Source/WebGPU/WebGPU/TextureOrTextureView.h: Added.
(WebGPU::TextureOrTextureView::TextureOrTextureView):
(WebGPU::TextureOrTextureView::setCommandEncoder):
(WebGPU::TextureOrTextureView::rasterizationMapForSlice):
(WebGPU::isRenderableTextureView):

Canonical link: https://commits.webkit.org/300997@main